micro/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-api
  namespace: default
  labels:
    app: micro-api
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: micro-api
