micro/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-web
  namespace: default
  labels:
    app: micro-web
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: micro-web
