micro/api-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: micro-api
  namespace: default

spec:
  rules:
    - host: micro-api.hkdev
      http:
        paths:
          - path: /
            backend:
              serviceName: micro-api
              servicePort: 8080
